@@ -208,6 +208,7 @@
 	- fix: linux find-requires needs quotes around [:blank:].
 	- remove /var/lib/rpm/__db* cache files if %__dbi_cdb is not configured.
 	- python: add hiesenbug patch.
+	- add legacy (compile only) wrappers for fdFileno et al.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
